compiler/tests/success/otbn/intrinsic_sra.jazz
export
fn sra(reg u32 arg0 arg1) {
    reg u32 x;
    x = #SRA(arg0, arg1);
    [x] = x;
}
