compiler/tests/fail/arm-m4/intrinsic_udivS.jazz
export
fn udiv(reg u32 arg0, reg u32 arg1) -> reg u32 {
    reg u32 x;
    ?{}, x = #UDIVS(arg0, arg1);
    reg u32 res;
    res = x;
    return res;
}

